--- a/lesson03/styles/chamber-site-plan.css
+++ b/lesson03/styles/chamber-site-plan.css
@@ -1,82 +1,123 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Martel&family=Roboto&display=swap');
 :root {
-  
-  --primary-color: #03045e  ;
-  --secondary-color: #023e8a ;
-  --accent1-color: #0077b6;
-  --accent2-color: #0096c7; 
 
-  /* change the values below to your chosen font(s) */
-  --heading-font: "Roboto Slab";
-  --paragraph-font: Martel, Helvetica, sans-serif;
+  /* CSS HEX */
+--federal-blue: #03045eff;
+--marian-blue: #023e8aff;
+--honolulu-blue: #0077b6ff;
+--blue-green: #0096c7ff;
+--pacific-cyan: #00b4d8ff;
+--vivid-sky-blue: #48cae4ff;
+--non-photo-blue: #90e0efff;
+--rich-black: #010b13ff;
+--white: #ffffffff;
 
-  /* these colors below should be chosen from among your palette colors above */
-  --headline-color-on-white: #9b2226;  /* headlines on a white background */ 
-  --headline-color-on-color: white; /* headlines on a colored background */ 
-  --paragraph-color-on-white: #03045e; /* paragraph text on a white background */ 
-  --paragraph-color-on-color: white; /* paragraph text on a colored background */ 
-  --paragraph-background-color: #0077b6  ;
-  --nav-link-color: #caf0f8;
-  --nav-background-color: #023e8a;
-  --nav-hover-link-color: white;
-  --nav-hover-background-color: #0096c7;
+/* CSS HSL */
+--federal-blue: hsla(239, 94%, 19%, 1);
+--marian-blue: hsla(214, 97%, 27%, 1);
+--honolulu-blue: hsla(201, 100%, 36%, 1);
+--blue-green: hsla(195, 100%, 39%, 1);
+--pacific-cyan: hsla(190, 100%, 42%, 1);
+--vivid-sky-blue: hsla(190, 74%, 59%, 1);
+--non-photo-blue: hsla(189, 75%, 75%, 1);
+--rich-black: hsla(207, 90%, 4%, 1);
+--white: hsla(0, 0%, 100%, 1);
 }
+
 
 
 body {
-  max-width: 960px;
-  margin: 0 auto;
-  padding: 4em;
-  font-size: 18px;
+  background-color: white;
+  text-align: center ;
+  list-style-position: inside;
+  line-height: 1.5;
+  font-size: 20px;
+}
+/* Mobile styles (up to 767px width) */
+@media only screen and (max-width: 767px) {
+  /* Add mobile-specific styles here */
+  .container {
+      width: 100%;
+  }
+
+  /* Additional mobile styles... */
+}
+
+/* Larger viewport styles (768px width and above) */
+@media only screen and (min-width: 768px) {
+  /* Add larger viewport-specific styles here */
+  .container {
+      width: 80%;
+      margin: 0 auto;
+  }
+}
+
+
+
+header{
+  background-color: #023e8aff;
+  color: white;
+  text-align: center;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+.h1, h2, h3{
+  text-align: center;
+
+
+}
+
+
+
+footer{
+  background-color: #023e8aff;
+  color: white;
+  padding-top: 5px;
+  padding-bottom: 5px;
   text-align: center;
 }
-img {
-  display: block;
-  margin: 0 auto;
-  max-width: 300px;
-  
 
+.table-style{
+
+  display: flex;
+  justify-content: center;
 }
 
 
 
 
-
-h1, h2, h3, h4, h5, h6 {
-  font-family: var(--heading-font);
-  color: var(--headline-color-on-white);
-}
-h2 {
+.tr, th, td{
+  border: 1px solid;
+  background-color: #0096c7ff;
   text-align: center;
-}
-hr {
-  height: 3px;
-  margin: 35px 0;
-  background: var(--accent1-color);
-}
-header {
-  padding: 1em;
-  text-align: center;
-  color: var(--headline-color-on-color);
-  background-color: var(--paragraph-background-color);
-
- 
+  width: 150px;
+  height: 40px;
 }
 
 
-header > h1, header > h2 {
-  color: var(--headline-color-on-color);
+.first-row{ 
+  color: whi;
+  background-color: aliceblue;
 }
 
-p {
-  font-family: var(--paragraph-font);
-  color: var(--paragraph-color-on-white);
-  padding: 1em;
+
+
+.primary{
+  background-color: #03045eff;
+  color: white;
+
 }
-.colors {
-  width: 100%;
-  min-width: 350px;
-  margin: 30px auto;
-  text-align: center;
+.secondary{
+  background-color: #023e8aff;
+  color: white;
 }
+.accent1{
+  background-color: #90e0efff;;
+}
+.accent2{
+  background-color: #ffffffff;;
+}
+/* .td{
+  border: 1px solid;
+} */
