--- a/styles/larger.css
+++ b/styles/larger.css
@@ -1,14 +1,50 @@
-@media only screen and (min-width: 600px) {
+/* @media only screen and (min-width: 600px) {
     body {
         
         
     }
     
 .vertical-nav {
-    flex-direction: row;
+    flex-direction: row; */
     /*feedback*/
-    justify-content: center;
+    /* justify-content: center;
 }
 
-}
+} */
 
+
+@media(max-width:768px){
+    .hamburger{
+        display: block;
+    }
+
+    .hamburger.active .bar:nth-child(2){
+        opacity: 0;
+    }
+
+    .hamburger.active .bar:nth-child(1){
+        transform: translateY(8px) rotate(45deg);
+    }
+    .hamburger.active .bar:nth-child(3){
+        transform: translateY(-8px) rotate(-45deg);
+    }
+
+    .nav-menu{
+        position: fixed;
+        left: -100%;
+        top: 150px;
+        gap: 0;
+        flex-direction: column;
+        background-color: black;
+        width: 100%;
+        transition: 0.3s;
+    }
+
+    .nav-item{
+        margin: 10px 0;
+    }
+
+    .nav-menu.active{
+        left: 0;
+    }
+} 
