--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -20,7 +20,7 @@ header {
     border-radius: 50%;
     margin: 1px;
     position: relative;
-    top: -60px;
+    top: -55px;
     left: 45%;
 }
 
@@ -35,9 +35,10 @@ header {
 .navigation-btn {
     position: absolute; 
     text-align: right;
-    top: 15px;
+    top: 5px;
     right: 10px;
     padding-top: 15px;
+    word-spacing: 1px;
 }
 
 
@@ -221,6 +222,16 @@ footer {
 }
 
 
+/* Copy right */
+.copy-right {
+    order: 3; 
+    color: blue;
+    position: relative; 
+    top: 95px;
+    text-align: center;
+    align-items: center;
+    right: 10%;
+}
 /* Copy right */
 .copy-right {
     order: 3; 
